--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "kagglehub>=0.3.13",
     "openpyxl>=3.1.5",
     "pandas>=2.3.3",
+    "requests>=2.32.5",
     "scikit-learn>=1.7.2",
+    "streamlit>=1.52.2",
     "uvicorn>=0.38.0",
 ]
