--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "openpyxl>=3.1.5",
     "pandas>=2.3.3",
     "pytest>=9.0.2",
+    "redis>=7.1.0",
     "requests>=2.32.5",
     "scikit-learn>=1.7.2",
     "streamlit>=1.52.2",
