--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,4 +67,4 @@ jobs:
       run: docker build -t movie-recommender:ci .
 
     - name: Run Tests inside Docker
-      run: docker run --rm movie-recommender:ci pytest -v
+      run: docker run --rm movie-recommender:ci pytest tests/test_api.py -v
