--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,7 @@ jobs:
 
     - name: Build Docker Image
       run: docker build -t movie-recommender:ci .
-
+    - name: 🔍 Debug - Pokaż strukturę plików
+      run: docker run --rm movie-recommender:ci ls -R /app
     - name: Run Tests inside Docker
-      run: docker run --rm movie-recommender:ci pytest tests/test_api.py -v
+      run: docker run --rm movie-recommender:ci /app/.venv/bin/pytest tests/test_api.py -v
